Devel::Cover history

{{$NEXT}}

1.38 - 5 June 2022
 - Improve documentation

1.37 - 5 June 2022
 - Fix Subroutine module docs (bkerin) (GH-262)
 - Use github actions instead of travis (Zakariyya Mughal) (GH-291)
 - Improve mkdir error messages (Felipe Gasper) (GH-296)
 - Remove asterisk from gcov count (Zakariyya Mughal) (GH-294)
 - Test against 5.36.0
 - Avoid warnings from check_files (Nicolas R) (GH-292)
 - Support __SUB__ (Graham Knop) (GH-290, GH-243, GH-285)
 - Support uncoverable count ranges (Tina Müller) (GH-288)
 - Improve gcov support for XS code (Ed J) (GH-280)
 - Allow overriding of HTML code highlighting (Jesús Alonso Abad) (GH-271)
 - Improve contributing docs

1.36 - 19 May 2020
 - Fix pod error
 - Quieten perltidy syntax highlighting errors
 - Fix up minimum perl version (Dick Franks) (GH-268)
 - Fix passing full path for cover DB (GH-267)

1.35 - 17 May 2020
 - Replace "use vars" with "our" (James Raspass) (GH-255)
 - Remove tray db file from release
 - Don't chdir when given a -dir flag (Dave Rolsky) (GH-253)
 - Manage code references in @INC (Slaven Rezić) (GH-249, GH-250)

1.34 - 16 May 2020
 - Minimum supported version is now 5.10.0 (Karen Etheridge) (GH-226)
 - Support 5.32 by accomodating signauture changes (GH-260)

1.33 - 26 April 2019
 - Fix pod error (Mohammad S Anwar) (GH-240)
 - Work with cperl where class is a keyword (Reini Urban) (GH-238)
 - Restore correct behaviour on merging DBs (Daniel Egeberg) (GH-232)
 - Fix gcov output being on incorrect lines
 - Fix cover -test with Build.PL (Dagfinn Ilmari Mannsåker) (GH-241)

1.32 - 25 April 2019
 - Test up to 5.26.3, 5.28.3 and  5.29.10
 - Get dev environment working on MacOS
 - Fix up tests with recent Math::BigInt versions (Ed J) (GH-219)
 - Add progress text when processing coverage (Christian Walde) (GH-221)
 - Optionally use Term::Size (Paul "LeoNerd" Evans) (GH-228)
 - Fix indentation in pod (Graham Knop) (GH-229)
 - Fix warn precedence (Alexandr Evstigneev) (GH-231)
