@@ -40,7 +40,6 @@ filename = LICENCE
 perl                          = 5.010000
 Storable                      = 0
 Digest::MD5                   = 0
-B::Debug                      = 0
 HTML::Entities                = 3.69
 [Prereqs / Recommends]
 Template                      = 2.00
